--- a/quiz.css
+++ b/quiz.css
@@ -2,7 +2,20 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+p {
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Playfair', serif;
 
+}
+
+h2{
+    
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Playfair', serif;
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -14,7 +27,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     justify-content: center;
-    background-color: azure;
+    background-color: #C3B59C;
 }
 
 main {
@@ -50,9 +63,6 @@ li {
 /*display only the intro page and hide the rest sections*/
 .question_page,
 .submit_panel,
-/* .highscore_page, */
-/* #highScoresButton, */
-/* #high_score_header, */
 #backButton,
 #highScores_Button,
 #clear_btn,
@@ -61,7 +71,7 @@ li {
 }
 
 .button {
-    background: rgb(64, 125, 240);
+    background: #2E3D34;
     border-radius: 5px;
     border: 0px;
     padding: 10px;
@@ -71,7 +81,7 @@ li {
 }
 
 .button:hover {
-    background-color: rgb(94, 146, 243);
+    background-color: #68623A;
 }
 
 #timerContainer {
@@ -86,7 +96,7 @@ li {
 }
 
 #warning{
-    color: red;
+    color: rgb(190, 87, 87);
     height: 25px;
 }
 #enter-initials{
@@ -96,8 +106,7 @@ li {
 #show_results_label{
     width: 100%;
     height: 200px;
-    /* border: 1px solid #171616; */
-    /* background-color: antiquewhite; */
+
 }
 #high_score_list{
     width: 20%;
@@ -108,7 +117,7 @@ li {
     padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border: 1px solid #1a47b8;
+    border: 1px solid #324473;
 }
 
 @media only screen and (max-width: 960px) {
